// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blog API Client fetchPost should return a post with the slug terminal-setup 1`] = `
{
  "dateModified": "2016-02-06 15:55",
  "datePublished": {
    "formatDate": "06 February 2016",
    "formatMonthDay": "Feb 06",
    "value": "2016-02-06 15:55",
  },
  "disqusIdentifier": "7",
  "excerpt": "Carlos Cuesta terminal setup with ZSH and Oh-My-ZSH, using materialshell and my dotfiles.",
  "images": {
    "featured": {
      "src": "https://res.cloudinary.com/carloscuesta/image/upload/v1593531858/blog-featured-images/Terminal_Setup.png",
    },
    "preview": {
      "lqpi": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAACCAIAAADwyuo0AAAACXBIWXMAABcRAAAXEQHKJvM/AAAADklEQVR4nGMQRQIMyBwAGbIB+ZVuRQQAAAAASUVORK5CYII=",
      "src": "https://res.cloudinary.com/carloscuesta/image/upload/w_500/v1593531858/blog-featured-images/Terminal_Setup.png",
    },
  },
  "readingTime": "1 min read",
  "slug": "terminal-setup",
  "source": "
**Terminal** is a place where a developer spends a lot of time, running commands, looking for outputs and doing a bunch of stuff, so better to stay comfortable and productive with it.

### Shell

I use [**ZSH**](http://www.zsh.org) as my main shell along with [**Oh-My-Zsh**](http://ohmyz.sh). By default, OS X comes with bash, a simpler shell. To setup ZSH and install Oh-My-Zsh run:

\`\`\`language-bash
$ chsh -s /bin/zsh
$ sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
\`\`\`

To see what shell are you using run:

\`\`\`language-bash
$ echo $SHELL
\`\`\`

### UI

After setting up ZSH and Oh-My-Zsh, now we are ready to customize and put our shell on steroids.

I use a theme called [**materialshell**](https://github.com/carloscuesta/materialshell) that I've made for my own.

[**Follow this guide to install and setup my terminal**.](https://github.com/carloscuesta/materialshell/blob/master/README.md)

![Carlos Cuesta Shell - MaterialShell](https://res.cloudinary.com/carloscuesta/image/upload/v1454753967/gazne7uhxuq8ugpfvile.png)

### Dotfiles

I have my own [**dotfiles repository**](https://github.com/carloscuesta/dotfiles) with all my shell configuration files, where you can take a look to learn and be more productive with your shell.
",
  "title": "Terminal setup",
}
`;

exports[`Blog API Client fetchPosts should return an array of posts sorted by datePublished 1`] = `
[
  {
    "datePublished": {
      "formatDate": "22 April 2023",
      "formatMonthDay": "Apr 22",
      "value": "2023-04-22 22:00",
    },
    "excerpt": "React Miami 2023 conference review. A two days conference about React that takes places in Miami...",
    "images": {
      "featured": {
        "src": "https://res.cloudinary.com/carloscuesta/image/upload/v1682161443/blog-featured-images/react-miami.jpg",
      },
      "preview": {
        "lqpi": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAACCAIAAADwyuo0AAAACXBIWXMAABcSAAAXEgFnn9JSAAAADklEQVR4nGNgRAIMyBwAAVIAGQHQACAAAAAASUVORK5CYII=",
        "src": "https://res.cloudinary.com/carloscuesta/image/upload/w_500/v1682161443/blog-featured-images/react-miami.jpg",
      },
    },
    "slug": "react-miami-2023",
    "title": "React Miami 2023",
    "views": "1,000 views",
  },
  {
    "datePublished": {
      "formatDate": "29 January 2023",
      "formatMonthDay": "Jan 29",
      "value": "2023-01-29 22:00",
    },
    "excerpt": "A codemod is a tool that helps you with large-scale refactors. In this article I'm going to...",
    "images": {
      "featured": {
        "src": "https://res.cloudinary.com/carloscuesta/image/upload/v1675022732/blog-featured-images/Effective_Refactoring_with_Codemods.png",
      },
      "preview": {
        "lqpi": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAACCAIAAADwyuo0AAAACXBIWXMAABcRAAAXEQHKJvM/AAAAD0lEQVR4nGNgSPiPQMgcAIa6CvnplqETAAAAAElFTkSuQmCC",
        "src": "https://res.cloudinary.com/carloscuesta/image/upload/w_500/v1675022732/blog-featured-images/Effective_Refactoring_with_Codemods.png",
      },
    },
    "slug": "effective-refactoring-with-codemods",
    "title": "Effective Refactoring with Codemods",
    "views": "1,000 views",
  },
]
`;

exports[`Blog API Client getPostSlugs should match getPostSlugs 1`] = `
[
  "2016-year-in-review",
  "building-server-driven-uis",
  "chrome-devtools-customization",
  "composing-uis-with-finite-state-machines",
  "debugging-with-the-javascript-console",
  "discovering-hyperterm",
  "effective-refactoring-with-codemods",
  "front-end-tooling-guide-to-improve-developer-experience",
  "functional-programming-in-javascript",
  "git-development-workflow",
  "greenkeeper",
  "hello-world",
  "how-to-deploy-static-sites-with-surge",
  "https-cloudflare",
  "immutability-in-javascript",
  "javascript-monorepos-lerna-yarn-workspaces",
  "keep-npm-dependencies-up-to-date",
  "managing-react-native-crashes-with-error-boundaries",
  "mastering-and-hacking-slack",
  "moving-to-digitalocean",
  "moving-ulabox-to-nextjs",
  "react-amsterdam-2017",
  "react-miami-2023",
  "react-native-meets-codepush",
  "reactiveconf-2017",
  "scalable-react-components-architecture",
  "shipping-react-native-apps-with-fastlane",
  "shipping-react-native-fastlane-travis",
  "terminal-setup",
  "using-generators-to-improve-developer-productivity",
  "working-remotely-as-a-software-engineer",
  "writing-architecture-decision-records",
  "writing-rfcs",
]
`;

exports[`Blog API Client mutators transformPost should match the mutated post 1`] = `
{
  "dateModified": "2016-02-06 15:55",
  "datePublished": {
    "formatDate": "06 February 2016",
    "formatMonthDay": "Feb 06",
    "value": "2016-02-06 15:55",
  },
  "disqusIdentifier": "7",
  "excerpt": "Carlos Cuesta terminal setup with ZSH and Oh-My-ZSH, using materialshell and my dotfiles.",
  "images": {
    "featured": {
      "src": "https://res.cloudinary.com/carloscuesta/image/upload/v1454754838/kcuq34zbo1yieygmx0y6.png",
    },
    "preview": {
      "lqpi": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAACCAIAAADwyuo0AAAACXBIWXMAABcRAAAXEQHKJvM/AAAADklEQVR4nGMQRQIMyBwAGbIB+ZVuRQQAAAAASUVORK5CYII=",
      "src": "https://res.cloudinary.com/carloscuesta/image/upload/w_500/v1454754838/kcuq34zbo1yieygmx0y6.png",
    },
  },
  "readingTime": "1 min read",
  "slug": "terminal-setup",
  "source": "<p><strong>Terminal</strong> is a place where a developer spends a lot of time, running commands, looking for outputs and doing a bunch of stuff, so better to stay comfortable and productive with it.</p>
<h3>Shell</h3>
<p>I use <a href="http://www.zsh.org"><strong>ZSH</strong></a> as my main shell along with <a href="http://ohmyz.sh"><strong>Oh-My-Zsh</strong></a>. By default, OS X comes with bash, a simpler shell. To setup ZSH and install Oh-My-Zsh run:</p>
<pre><code class="language-language-bash">$ chsh -s /bin/zsh
$ sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
</code></pre>
<p>To see what shell are you using run:</p>
<pre><code class="language-language-bash">$ echo $SHELL
</code></pre>
<h3>UI</h3>
<p>After setting up ZSH and Oh-My-Zsh, now we are ready to customize and put our shell on steroids.</p>
<p>I use a theme called <a href="https://github.com/carloscuesta/materialshell"><strong>materialshell</strong></a> that I've made for my own.</p>
<p><a href="https://github.com/carloscuesta/materialshell/blob/master/README.md"><strong>Follow this guide to install and setup my terminal</strong>.</a></p>
<p><img src="https://res.cloudinary.com/carloscuesta/image/upload/v1454753967/gazne7uhxuq8ugpfvile.png" alt="Carlos Cuesta Shell - MaterialShell"></p>
<h3>Dotfiles</h3>
<p>I have my own <a href="https://github.com/carloscuesta/dotfiles"><strong>dotfiles repository</strong></a> with all my shell configuration files, where you can take a look to learn and be more productive with your shell.</p>",
  "title": "Terminal setup",
}
`;
